src/objects/FEP__c.object
<CustomObject>
    <fields>
        <fullName>What_is_your_anual_AP_Spend__c</fullName>
        <description>Range of annual AP Spend</description>
        <inlineHelpText>Enter range of annual AP Spend</inlineHelpText>
        <label>What is your annual AP Spend?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-1M</fullName>
                </value>
                <value>
                    <fullName>1-3M</fullName>
                </value>
                <value>
                    <fullName>3-5M</fullName>
                </value>
                <value>
                    <fullName>5-10M</fullName>
                </value>
                <value>
                    <fullName>10-20M</fullName>
                </value>
                <value>
                    <fullName>20-50M</fullName>
                </value>
                <value>
                    <fullName>50-100M</fullName>
                </value>
                <value>
                    <fullName>100M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_your_method_for_AP_Payment__c</fullName>
        <description>What is your method for AP Payment?</description>
        <inlineHelpText>Enter the current method for AP Payment</inlineHelpText>
        <label>What is your method for AP Payment?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>PCard</fullName>
                </value>
                <value>
                    <fullName>Mix</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_is_your_Non_WEX_Fuel_Card_Provider__c</fullName>
        <description>Who is your Non-WEX Fuel Card Provider?</description>
        <inlineHelpText>Select the non-WEX fuel provider</inlineHelpText>
        <label>Who is your Non-WEX Fuel Card Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cobrand Partner</fullName>
                </value>
                <value>
                    <fullName>COMDATA</fullName>
                </value>
                <value>
                    <fullName>EFS</fullName>
                </value>
                <value>
                    <fullName>FUELMAN</fullName>
                </value>
                <value>
                    <fullName>Multiservice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Marketer</fullName>
                </value>
                <value>
                    <fullName>Pac Pride</fullName>
                </value>
                <value>
                    <fullName>Private Label</fullName>
                </value>
                <value>
                    <fullName>TCH</fullName>
                </value>
                <value>
                    <fullName>Tcheck</fullName>
                </value>
                <value>
                    <fullName>VOYAGER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_is_your_Telematics_Provider__c</fullName>
        <description>Who is your Telematics Provider?</description>
        <inlineHelpText>Choose current Telematics Provider</inlineHelpText>
        <label>Who is your Telematics Provider?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>BSM Wireless (Non-WEX)</fullName>
                </value>
                <value>
                    <fullName>Cal Amp / Wireless Matrix</fullName>
                </value>
                <value>
                    <fullName>DriveCam / Lytx</fullName>
                </value>
                <value>
                    <fullName>FleetBoss</fullName>
                </value>
                <value>
                    <fullName>Fleetmatics / Sagequest</fullName>
                </value>
                <value>
                    <fullName>Geotab (Non-WEX)</fullName>
                </value>
                <value>
                    <fullName>GPS Insight (Non-WEX)</fullName>
                </value>
                <value>
                    <fullName>GreenRoad</fullName>
                </value>
                <value>
                    <fullName>Navtrak</fullName>
                </value>
                <value>
                    <fullName>Nextraq (Fleetcor)</fullName>
                </value>
                <value>
                    <fullName>No Provider</fullName>
                </value>
                <value>
                    <fullName>OmniTracs/XRS</fullName>
                </value>
                <value>
                    <fullName>Other Provider</fullName>
                </value>
                <value>
                    <fullName>PeopleNet</fullName>
                </value>
                <value>
                    <fullName>Qualcomm</fullName>
                </value>
                <value>
                    <fullName>Sperion/Fleet Locate</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>Teletrac</fullName>
                </value>
                <value>
                    <fullName>Telogis</fullName>
                </value>
                <value>
                    <fullName>Trimble / Peoplenet</fullName>
                </value>
                <value>
                    <fullName>VZ Networkfleet (Non-WEX)</fullName>
                </value>
                <value>
                    <fullName>WEX / BSM</fullName>
                </value>
                <value>
                    <fullName>WEX / Geotab</fullName>
                </value>
                <value>
                    <fullName>WEX/ GPSI</fullName>
                </value>
                <value>
                    <fullName>WEX / VZ NWF</fullName>
                </value>
                <value>
                    <fullName>Zonar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Paycards__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label># of Cards</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>FEP</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FEP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>